Cache static assets

--- a/blockchain.topmonks.com/config/path-config.json
+++ b/blockchain.topmonks.com/config/path-config.json
@@ -18,12 +18,12 @@
 
   "javascripts": {
     "src": "javascripts",
-    "dest": "javascripts"
+    "dest": "assets/js"
   },
 
   "stylesheets": {
     "src": "stylesheets",
-    "dest": "stylesheets"
+    "dest": "assets/css"
   },
 
   "images": {
