--- a/studio.topmonks.com/config/path-config.json
+++ b/studio.topmonks.com/config/path-config.json
@@ -14,12 +14,12 @@
 
   "javascripts": {
     "src": "javascripts",
-    "dest": "javascripts"
+    "dest": "assets/js"
   },
 
   "stylesheets": {
     "src": "stylesheets",
-    "dest": "stylesheets"
+    "dest": "assets/css"
   },
 
   "images": {
