--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "@material/layout-grid": "^4.0.0",
     "@pulumi/aws": "^1.17.0",
     "@pulumi/pulumi": "^1.8.1",
-    "@types/node": "^12.12.18",
+    "@types/node": "^13.1.6",
     "js-yaml": "^3.13.1",
     "lodash": "4.17.13",
     "yaml": "^1.7.2"
@@ -38,7 +38,7 @@
     "local-web-server": "^3.0.7",
     "marked": "^0.8.0",
     "natives": "1.1.6",
-    "node-sass-glob-importer": "^5.3.2",
+    "node-sass-magic-importer": "^5.3.2",
     "npm-run-all": "^4.1.5",
     "prettier": "^1.19.1",
     "rimraf": "^3.0.0",
