--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -65,12 +65,14 @@ jobs:
           cloud-url: s3://pulumi.tmcloud.io
       - restore_cache:
           keys:
-            - v5-dependencies-{{ checksum "yarn.lock" }}
-      - run: yarn install --frozen-lockfile --link-duplicates --no-progress
+            - v6-dependencies-{{ checksum "yarn.lock" }}
+      - run: yarn install --frozen-lockfile --no-progress
       - save_cache:
           paths:
             - ~/.cache/yarn
-          key: v5-dependencies-{{ checksum "yarn.lock" }}
+            - ./.pnp
+            - ./.pnp.js
+          key: v6-dependencies-{{ checksum "yarn.lock" }}
       - run: yarn build
       - run: |
           mkdir results
@@ -95,10 +97,10 @@ jobs:
           cloud-url: s3://pulumi.tmcloud.io
       - restore_cache:
           keys:
-            - v5-dependencies-{{ checksum "yarn.lock" }}
+            - v6-dependencies-{{ checksum "yarn.lock" }}
       - run:
           name: Install deps
-          command: yarn install --frozen-lockfile --production --no-progress --link-duplicates
+          command: yarn install --frozen-lockfile --production --no-progress --disable-pnp
       - pulumi/update:
           stack: topmonks-webs
           skip-preview: true
@@ -115,10 +117,10 @@ jobs:
           cloud-url: s3://pulumi.tmcloud.io
       - restore_cache:
           keys:
-            - v5-dependencies-{{ checksum "yarn.lock" }}
+            - v6-dependencies-{{ checksum "yarn.lock" }}
       - run:
           name: Install deps
-          command: yarn install --frozen-lockfile --production --no-progress --link-duplicates
+          command: yarn install --frozen-lockfile --production --no-progress --disable-pnp
       - pulumi/preview:
           stack: topmonks-webs
 
@@ -135,8 +137,8 @@ jobs:
           at: ~/topmonks-webs
       - restore_cache:
           keys:
-            - v5-dependencies-{{ checksum "yarn.lock" }}
-      - run: yarn install --frozen-lockfile --link-duplicates --no-progress
+            - v6-dependencies-{{ checksum "yarn.lock" }}
+      - run: yarn install --frozen-lockfile --no-progress
       - run:
           name: Install self-signed cert for localhost
           command: |
