--- a/package.json
+++ b/package.json
@@ -36,6 +36,21 @@
     "gulp-merge-json": "^1.3.1",
     "lighthouse": "^5.6.0",
     "local-web-server": "^3.0.7",
+    "lws-basic-auth": "^1.0.3",
+    "lws-blacklist": "^2.0.2",
+    "lws-body-parser": "^1.0.2",
+    "lws-compress": "^1.0.2",
+    "lws-conditional-get": "^1.0.1",
+    "lws-cors": "^2.0.1",
+    "lws-index": "^1.0.5",
+    "lws-json": "^1.0.1",
+    "lws-log": "^1.0.3",
+    "lws-mime": "^1.0.1",
+    "lws-range": "^2.0.1",
+    "lws-request-monitor": "^1.0.4",
+    "lws-rewrite": "^2.0.10",
+    "lws-spa": "^2.0.2",
+    "lws-static": "^1.1.3",
     "marked": "^0.8.0",
     "natives": "1.1.6",
     "npm-run-all": "^4.1.5",
@@ -53,7 +68,7 @@
     "lint:es": "eslint ./",
     "lint:scss": "stylelint-config-prettier-check",
     "lint": "run-p lint:*",
-    "test:ava": "ava --tap | tap-xunit > ./results/ava.xml",
+    "test:ava": "ava | tap-xunit > ./results/ava.xml",
     "test:lighthouse": "lighthouse https://localhost:8000/ --output json --output html --output-path ./results/lh.html --chrome-flags=\"--headless\" --no-enable-error-reporting --skip-audits themed-omnibox --skip-audits redirects-http --skip-audits load-fast-enough-for-pwa --skip-audits service-worker --skip-audits splash-screen --skip-audits webapp-install-banner --skip-audits works-offline",
     "test:broken-links": "run-s test:broken-links:*",
     "test:eslint": "eslint ./  --format junit --output-file ./results/eslint.xml",
@@ -99,5 +114,8 @@
     "start:session-monk.topmonks.com": "BLENDID_CONFIG_PATH=./session-monk.topmonks.com/config/ blendid",
     "build:session-monk.topmonks.com": "BLENDID_CONFIG_PATH=./session-monk.topmonks.com/config/ blendid -- build",
     "test:broken-links:session-monk.topmonks.com": "blcl ./public/session-monk.topmonks.com -ro --exclude linkedin.com --exclude maps.googleapis.com --exclude insight.topmonks.com/avatar/ --exclude caffe.topmonks.cz --exclude blog.topmonks.com"
+  },
+  "resolutions": {
+    "fsevents": "npm:dummypkg-a@1.0.0"
   }
 }
