--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -66,7 +66,7 @@ jobs:
       - restore_cache:
           keys:
             - v6-dependencies-{{ checksum "yarn.lock" }}
-      - run: yarn install --frozen-lockfile --no-progress
+      - run: yarn install --frozen-lockfile  --link-duplicates --no-progress
       - save_cache:
           paths:
             - ~/.cache/yarn
@@ -100,7 +100,7 @@ jobs:
             - v6-dependencies-{{ checksum "yarn.lock" }}
       - run:
           name: Install deps
-          command: yarn install --frozen-lockfile --production --no-progress --disable-pnp
+          command: yarn install --frozen-lockfile --link-duplicates --production --no-progress --disable-pnp
       - pulumi/update:
           stack: topmonks-webs
           skip-preview: true
@@ -120,7 +120,7 @@ jobs:
             - v6-dependencies-{{ checksum "yarn.lock" }}
       - run:
           name: Install deps
-          command: yarn install --frozen-lockfile --production --no-progress --disable-pnp
+          command: yarn install --frozen-lockfile --link-duplicates --production --no-progress --disable-pnp
       - pulumi/preview:
           stack: topmonks-webs
 
@@ -138,7 +138,7 @@ jobs:
       - restore_cache:
           keys:
             - v6-dependencies-{{ checksum "yarn.lock" }}
-      - run: yarn install --frozen-lockfile --no-progress
+      - run: yarn install --frozen-lockfile --link-duplicates --no-progress
       - run:
           name: Install self-signed cert for localhost
           command: |
