--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
     "@pulumi/aws": "^1.17.0",
     "@pulumi/pulumi": "^1.8.1",
     "@types/node": "^13.1.6",
-    "js-yaml": "^3.13.1",
     "lodash": "4.17.13",
     "yaml": "^1.7.2"
   },
@@ -20,7 +19,6 @@
     "@types/chart.js": "^2.9.5",
     "@types/yaml": "^1.2.0",
     "ava": "^2.4.0",
-    "bluebird": "^3.7.2",
     "broken-link-checker-local": "^0.2.1",
     "chalk": "^3.0.0",
     "commander": "^4.1.0",
@@ -52,7 +50,6 @@
     "lws-spa": "^2.0.2",
     "lws-static": "^1.1.3",
     "marked": "^0.8.0",
-    "natives": "1.1.6",
     "npm-run-all": "^4.1.5",
     "prettier": "^1.19.1",
     "rimraf": "^3.0.0",
@@ -116,7 +113,9 @@
     "test:broken-links:session-monk.topmonks.com": "blcl ./public/session-monk.topmonks.com -ro --exclude linkedin.com --exclude maps.googleapis.com --exclude insight.topmonks.com/avatar/ --exclude caffe.topmonks.cz --exclude blog.topmonks.com"
   },
   "resolutions": {
-    "fsevents": "npm:dummypkg-a@1.0.0"
+    "bluebird": "npm:bluebird@3.7.2",
+    "fsevents": "npm:dummypkg-a@1.0.0",
+    "lodash": "npm:lodash@4.17.15"
   },
   "installConfig": {
     "pnp": true
