--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -145,7 +145,7 @@ jobs:
             sudo apt-get install libnss3-tools
             mkdir -p $HOME/.pki/nssdb
             certutil -d $HOME/.pki/nssdb -N --empty-password
-            certutil -d sql:$HOME/.pki/nssdb -A -t "P,," -n lws-cert -i ./node_modules/lws/ssl/lws-cert.pem
+            certutil -d sql:$HOME/.pki/nssdb -A -t "P,," -n lws-cert -i $(yarn -s node --print "require.resolve('lws/ssl/lws-cert.pem')")
       - run:
           name: Serve site content
           command: yarn serve -d ./public/<< parameters.site_name >>
