--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "gulp-merge-json": "^1.3.1",
     "lighthouse": "^5.6.0",
     "local-web-server": "^3.0.7",
+    "lws": "^2.0.8",
     "lws-basic-auth": "^1.0.3",
     "lws-blacklist": "^2.0.2",
     "lws-body-parser": "^1.0.2",
