--- a/package.json
+++ b/package.json
@@ -19,9 +19,10 @@
     "@types/chart.js": "^2.9.5",
     "@types/yaml": "^1.2.0",
     "ava": "^2.4.0",
-    "broken-link-checker-local": "^0.2.1",
     "chalk": "^3.0.0",
+    "check-broken-links": "^2.0.4",
     "commander": "^4.1.0",
+    "console.table": "^0.10.0",
     "dotenv-cli": "^3.1.0",
     "eslint": "^6.8.0",
     "eslint-config-prettier": "^6.9.0",
@@ -82,22 +83,22 @@
     "pulumi:login": "AWS_PROFILE=topmonks pulumi login --cloud-url s3://pulumi.tmcloud.io && AWS_PROFILE=topmonks pulumi stack select topmonks-webs",
     "start:www.topmonks.com": "BLENDID_CONFIG_PATH=./www.topmonks.com/config/ blendid",
     "build:www.topmonks.com": "BLENDID_CONFIG_PATH=./www.topmonks.com/config/ blendid -- build",
-    "test:broken-links:www.topmonks.com": "blcl ./public/www.topmonks.com -ro --exclude linkedin.com --exclude maps.googleapis.com --exclude insight.topmonks.com/avatar/ --exclude blog.topmonks.com",
+    "test:broken-links:www.topmonks.com": "blc https://localhost:8000/ -ro --exclude linkedin.com --exclude maps.googleapis.com --exclude insight.topmonks.com/avatar/ --exclude blog.topmonks.com",
     "start:www.topmonks.cz": "BLENDID_CONFIG_PATH=./www.topmonks.cz/config/ blendid",
     "build:www.topmonks.cz": "BLENDID_CONFIG_PATH=./www.topmonks.cz/config/ blendid -- build",
-    "test:broken-links:www.topmonks.cz": "blcl ./public/www.topmonks.cz -ro --exclude linkedin.com --exclude maps.googleapis.com --exclude insight.topmonks.com/avatar/ --exclude blog.topmonks.com",
+    "test:broken-links:www.topmonks.cz": "blc https://localhost:8000/ -ro --exclude linkedin.com --exclude maps.googleapis.com --exclude insight.topmonks.com/avatar/ --exclude blog.topmonks.com",
     "start:prodeti.topmonks.cz": "BLENDID_CONFIG_PATH=./prodeti.topmonks.cz/config/ blendid",
     "build:prodeti.topmonks.cz": "BLENDID_CONFIG_PATH=./prodeti.topmonks.cz/config/ blendid -- build",
-    "test:broken-links:prodeti.topmonks.cz": "blcl ./public/prodeti.topmonks.cz -ro --exclude linkedin.com --exclude www.topmonks.cz --exclude blog.topmonks.com",
+    "test:broken-links:prodeti.topmonks.cz": "blc https://localhost:8000/ -ro --exclude linkedin.com --exclude www.topmonks.cz --exclude blog.topmonks.com",
     "start:caffe.topmonks.cz": "BLENDID_CONFIG_PATH=./caffe.topmonks.cz/config/ dotenv blendid",
     "build:caffe.topmonks.cz": "BLENDID_CONFIG_PATH=./caffe.topmonks.cz/config/ dotenv blendid -- build",
-    "test:broken-links:caffe.topmonks.cz": "blcl ./public/caffe.topmonks.cz -ro --exclude linkedin.com --exclude blog.topmonks.com",
+    "test:broken-links:caffe.topmonks.cz": "blc https://localhost:8000/ -ro --exclude linkedin.com --exclude blog.topmonks.com",
     "start:studio.topmonks.com": "BLENDID_CONFIG_PATH=./studio.topmonks.com/config/ blendid",
     "build:studio.topmonks.com": "BLENDID_CONFIG_PATH=./studio.topmonks.com/config/ blendid -- build",
-    "test:broken-links:studio.topmonks.com": "blcl ./public/studio.topmonks.com -ro --exclude linkedin.com --exclude blog.topmonks.com",
+    "test:broken-links:studio.topmonks.com": "blc https://localhost:8000/ -ro --exclude linkedin.com --exclude blog.topmonks.com",
     "start:blockchain.topmonks.com": "BLENDID_CONFIG_PATH=./blockchain.topmonks.com/config/ blendid",
     "build:blockchain.topmonks.com": "BLENDID_CONFIG_PATH=./blockchain.topmonks.com/config/ blendid -- build",
-    "test:broken-links:blockchain.topmonks.com": "blcl ./public/blockchain.topmonks.com -ro --exclude linkedin.com --exclude blog.topmonks.com --exclude www.alza.cz --exclude www.investicniweb.cz",
+    "test:broken-links:blockchain.topmonks.com": "blc https://localhost:8000/ -ro --exclude linkedin.com --exclude blog.topmonks.com --exclude www.alza.cz --exclude www.investicniweb.cz",
     "start:www.hookamonk.com": "BLENDID_CONFIG_PATH=./www.hookamonk.com/config/ blendid",
     "build:www.hookamonk.com": "BLENDID_CONFIG_PATH=./www.hookamonk.com/config/ blendid -- build",
     "test:broken-links:www.hookamonk.com": "blcl ./public/www.hookamonk.com -ro",
