--- a/package.json
+++ b/package.json
@@ -20,9 +20,7 @@
     "@types/yaml": "^1.2.0",
     "ava": "^2.4.0",
     "chalk": "^3.0.0",
-    "check-broken-links": "^2.0.4",
     "commander": "^4.1.0",
-    "console.table": "^0.10.0",
     "dotenv-cli": "^3.1.0",
     "eslint": "^6.8.0",
     "eslint-config-prettier": "^6.9.0",
@@ -70,7 +68,6 @@
     "lint": "run-p lint:*",
     "test:ava": "ava | tap-xunit > ./results/ava.xml",
     "test:lighthouse": "lighthouse https://localhost:8000/ --output json --output html --output-path ./results/lh.html --chrome-flags=\"--headless\" --no-enable-error-reporting --skip-audits themed-omnibox --skip-audits redirects-http --skip-audits load-fast-enough-for-pwa --skip-audits service-worker --skip-audits splash-screen --skip-audits webapp-install-banner --skip-audits works-offline",
-    "test:broken-links": "run-s test:broken-links:*",
     "test:eslint": "eslint ./  --format junit --output-file ./results/eslint.xml",
     "test:stylelint": "stylelint-config-prettier-check",
     "test:website-create": "yarn create-site test.topmonks.com",
@@ -83,37 +80,26 @@
     "pulumi:login": "AWS_PROFILE=topmonks pulumi login --cloud-url s3://pulumi.tmcloud.io && AWS_PROFILE=topmonks pulumi stack select topmonks-webs",
     "start:www.topmonks.com": "BLENDID_CONFIG_PATH=./www.topmonks.com/config/ blendid",
     "build:www.topmonks.com": "BLENDID_CONFIG_PATH=./www.topmonks.com/config/ blendid -- build",
-    "test:broken-links:www.topmonks.com": "blc https://localhost:8000/ -ro --exclude linkedin.com --exclude maps.googleapis.com --exclude insight.topmonks.com/avatar/ --exclude blog.topmonks.com",
     "start:www.topmonks.cz": "BLENDID_CONFIG_PATH=./www.topmonks.cz/config/ blendid",
     "build:www.topmonks.cz": "BLENDID_CONFIG_PATH=./www.topmonks.cz/config/ blendid -- build",
-    "test:broken-links:www.topmonks.cz": "blc https://localhost:8000/ -ro --exclude linkedin.com --exclude maps.googleapis.com --exclude insight.topmonks.com/avatar/ --exclude blog.topmonks.com",
     "start:prodeti.topmonks.cz": "BLENDID_CONFIG_PATH=./prodeti.topmonks.cz/config/ blendid",
     "build:prodeti.topmonks.cz": "BLENDID_CONFIG_PATH=./prodeti.topmonks.cz/config/ blendid -- build",
-    "test:broken-links:prodeti.topmonks.cz": "blc https://localhost:8000/ -ro --exclude linkedin.com --exclude www.topmonks.cz --exclude blog.topmonks.com",
     "start:caffe.topmonks.cz": "BLENDID_CONFIG_PATH=./caffe.topmonks.cz/config/ dotenv blendid",
     "build:caffe.topmonks.cz": "BLENDID_CONFIG_PATH=./caffe.topmonks.cz/config/ dotenv blendid -- build",
-    "test:broken-links:caffe.topmonks.cz": "blc https://localhost:8000/ -ro --exclude linkedin.com --exclude blog.topmonks.com",
     "start:studio.topmonks.com": "BLENDID_CONFIG_PATH=./studio.topmonks.com/config/ blendid",
     "build:studio.topmonks.com": "BLENDID_CONFIG_PATH=./studio.topmonks.com/config/ blendid -- build",
-    "test:broken-links:studio.topmonks.com": "blc https://localhost:8000/ -ro --exclude linkedin.com --exclude blog.topmonks.com",
     "start:blockchain.topmonks.com": "BLENDID_CONFIG_PATH=./blockchain.topmonks.com/config/ blendid",
     "build:blockchain.topmonks.com": "BLENDID_CONFIG_PATH=./blockchain.topmonks.com/config/ blendid -- build",
-    "test:broken-links:blockchain.topmonks.com": "blc https://localhost:8000/ -ro --exclude linkedin.com --exclude blog.topmonks.com --exclude www.alza.cz --exclude www.investicniweb.cz",
     "start:www.hookamonk.com": "BLENDID_CONFIG_PATH=./www.hookamonk.com/config/ blendid",
     "build:www.hookamonk.com": "BLENDID_CONFIG_PATH=./www.hookamonk.com/config/ blendid -- build",
-    "test:broken-links:www.hookamonk.com": "blcl ./public/www.hookamonk.com -ro",
     "start:monkstage.topmonks.com": "BLENDID_CONFIG_PATH=./monkstage.topmonks.com/config/ blendid",
     "build:monkstage.topmonks.com": "BLENDID_CONFIG_PATH=./monkstage.topmonks.com/config/ blendid -- build",
-    "test:broken-links:monkstage.topmonks.com": "blcl ./public/monkstage.topmonks.com -ro --exclude linkedin.com --exclude maps.googleapis.com --exclude insight.topmonks.com/avatar/ --exclude caffe.topmonks.cz --exclude blog.topmonks.com",
     "start:monkslab.cz": "BLENDID_CONFIG_PATH=./monkslab.cz/config/ blendid",
     "build:monkslab.cz": "BLENDID_CONFIG_PATH=./monkslab.cz/config/ blendid -- build",
-    "test:broken-links:monkslab.cz": "blcl ./public/monkslab.cz -ro --exclude linkedin.com --exclude maps.googleapis.com --exclude insight.topmonks.com/avatar/ --exclude caffe.topmonks.cz --exclude blog.topmonks.com",
     "start:www.hlidacshopu.cz": "BLENDID_CONFIG_PATH=./www.hlidacshopu.cz/config/ blendid",
     "build:www.hlidacshopu.cz": "BLENDID_CONFIG_PATH=./www.hlidacshopu.cz/config/ blendid -- build",
-    "test:broken-links:www.hlidacshopu.cz": "blcl ./public/www.hlidacshopu.cz -ro --exclude www.alza.cz --exclude alza.cz  --exclude www.czc.cz --exclude www.datart.cz --exclude www.itesco.cz --exclude www.kasa.cz --exclude www.kosik.cz --exclude www.lekarna.cz --exclude www.mall.cz --exclude www.mironet.cz --exclude www.mountfield.cz --exclude www.notino.cz --exclude www.rohlik.cz --exclude www.tsbohemia.cz --exclude zpravy.e15.cz --exclude apps.apple.com --exclude my.mameweb.cz",
     "start:session-monk.topmonks.com": "BLENDID_CONFIG_PATH=./session-monk.topmonks.com/config/ blendid",
-    "build:session-monk.topmonks.com": "BLENDID_CONFIG_PATH=./session-monk.topmonks.com/config/ blendid -- build",
-    "test:broken-links:session-monk.topmonks.com": "blcl ./public/session-monk.topmonks.com -ro --exclude linkedin.com --exclude maps.googleapis.com --exclude insight.topmonks.com/avatar/ --exclude caffe.topmonks.cz --exclude blog.topmonks.com"
+    "build:session-monk.topmonks.com": "BLENDID_CONFIG_PATH=./session-monk.topmonks.com/config/ blendid -- build"
   },
   "resolutions": {
     "bluebird": "npm:bluebird@3.7.2",
