--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "author": "TopMonks",
   "license": "MIT",
   "dependencies": {
+    "@lhci/utils": "^0.3.7",
     "@material/layout-grid": "^4.0.0",
     "@pulumi/aws": "^1.17.0",
     "@pulumi/pulumi": "^1.8.1",
@@ -15,6 +16,7 @@
     "yaml": "^1.7.2"
   },
   "devDependencies": {
+    "@lhci/cli": "^0.3.7",
     "@topmonks/blendid": "git://github.com/topmonks/blendid.git",
     "@types/chart.js": "^2.9.5",
     "@types/yaml": "^1.2.0",
@@ -32,7 +34,9 @@
     "gulp-cloudinary-upload": "^1.0.1",
     "gulp-markdown-to-json": "^1.1.0",
     "gulp-merge-json": "^1.3.1",
+    "isomorphic-fetch": "^2.2.1",
     "lighthouse": "^5.6.0",
+    "lighthouse-logger": "^1.2.0",
     "local-web-server": "^3.0.7",
     "lws": "^2.0.8",
     "lws-basic-auth": "^1.0.3",
