--- a/package.json
+++ b/package.json
@@ -71,7 +71,7 @@
     "lint:scss": "stylelint-config-prettier-check",
     "lint": "run-p lint:*",
     "test:ava": "ava | tap-xunit > ./results/ava.xml",
-    "test:lighthouse": "lighthouse https://localhost:8000/ --output json --output html --output-path ./results/lh.html --chrome-flags=\"--headless\" --no-enable-error-reporting --skip-audits themed-omnibox --skip-audits redirects-http --skip-audits load-fast-enough-for-pwa --skip-audits service-worker --skip-audits splash-screen --skip-audits webapp-install-banner --skip-audits works-offline",
+    "test:lighthouse": "lighthouse https://localhost:8000/ --config-path=.scripts/lighthouse/config.js --output json --output html --output-path ./.lighthouseci/lh.html --chrome-flags=\"--headless\" --no-enable-error-reporting --skip-audits themed-omnibox --skip-audits redirects-http --skip-audits load-fast-enough-for-pwa --skip-audits service-worker --skip-audits splash-screen --skip-audits webapp-install-banner --skip-audits works-offline",
     "test:eslint": "eslint ./  --format junit --output-file ./results/eslint.xml",
     "test:stylelint": "stylelint-config-prettier-check",
     "test:website-create": "yarn create-site test.topmonks.com",
