Use dotenv for every site

--- a/package.json
+++ b/package.json
@@ -82,28 +82,28 @@
     "pulumi:pre": "AWS_PROFILE=topmonks pulumi preview",
     "pulumi:refresh": "AWS_PROFILE=topmonks pulumi refresh",
     "pulumi:login": "AWS_PROFILE=topmonks pulumi login --cloud-url s3://pulumi.tmcloud.io && AWS_PROFILE=topmonks pulumi stack select topmonks-webs",
-    "start:www.topmonks.com": "BLENDID_CONFIG_PATH=./www.topmonks.com/config/ blendid",
-    "build:www.topmonks.com": "BLENDID_CONFIG_PATH=./www.topmonks.com/config/ blendid -- build",
-    "start:www.topmonks.cz": "BLENDID_CONFIG_PATH=./www.topmonks.cz/config/ blendid",
-    "build:www.topmonks.cz": "BLENDID_CONFIG_PATH=./www.topmonks.cz/config/ blendid -- build",
-    "start:prodeti.topmonks.cz": "BLENDID_CONFIG_PATH=./prodeti.topmonks.cz/config/ blendid",
-    "build:prodeti.topmonks.cz": "BLENDID_CONFIG_PATH=./prodeti.topmonks.cz/config/ blendid -- build",
+    "start:www.topmonks.com": "BLENDID_CONFIG_PATH=./www.topmonks.com/config/ dotenv blendid",
+    "build:www.topmonks.com": "BLENDID_CONFIG_PATH=./www.topmonks.com/config/ dotenv blendid -- build",
+    "start:www.topmonks.cz": "BLENDID_CONFIG_PATH=./www.topmonks.cz/config/ dotenv blendid",
+    "build:www.topmonks.cz": "BLENDID_CONFIG_PATH=./www.topmonks.cz/config/ dotenv blendid -- build",
+    "start:prodeti.topmonks.cz": "BLENDID_CONFIG_PATH=./prodeti.topmonks.cz/config/ dotenv blendid",
+    "build:prodeti.topmonks.cz": "BLENDID_CONFIG_PATH=./prodeti.topmonks.cz/config/ dotenv blendid -- build",
     "start:caffe.topmonks.cz": "BLENDID_CONFIG_PATH=./caffe.topmonks.cz/config/ dotenv blendid",
     "build:caffe.topmonks.cz": "BLENDID_CONFIG_PATH=./caffe.topmonks.cz/config/ dotenv blendid -- build",
-    "start:studio.topmonks.com": "BLENDID_CONFIG_PATH=./studio.topmonks.com/config/ blendid",
-    "build:studio.topmonks.com": "BLENDID_CONFIG_PATH=./studio.topmonks.com/config/ blendid -- build",
-    "start:blockchain.topmonks.com": "BLENDID_CONFIG_PATH=./blockchain.topmonks.com/config/ blendid",
-    "build:blockchain.topmonks.com": "BLENDID_CONFIG_PATH=./blockchain.topmonks.com/config/ blendid -- build",
-    "start:www.hookamonk.com": "BLENDID_CONFIG_PATH=./www.hookamonk.com/config/ blendid",
-    "build:www.hookamonk.com": "BLENDID_CONFIG_PATH=./www.hookamonk.com/config/ blendid -- build",
-    "start:monkstage.topmonks.com": "BLENDID_CONFIG_PATH=./monkstage.topmonks.com/config/ blendid",
-    "build:monkstage.topmonks.com": "BLENDID_CONFIG_PATH=./monkstage.topmonks.com/config/ blendid -- build",
-    "start:monkslab.cz": "BLENDID_CONFIG_PATH=./monkslab.cz/config/ blendid",
-    "build:monkslab.cz": "BLENDID_CONFIG_PATH=./monkslab.cz/config/ blendid -- build",
-    "start:www.hlidacshopu.cz": "BLENDID_CONFIG_PATH=./www.hlidacshopu.cz/config/ blendid",
-    "build:www.hlidacshopu.cz": "BLENDID_CONFIG_PATH=./www.hlidacshopu.cz/config/ blendid -- build",
-    "start:session-monk.topmonks.com": "BLENDID_CONFIG_PATH=./session-monk.topmonks.com/config/ blendid",
-    "build:session-monk.topmonks.com": "BLENDID_CONFIG_PATH=./session-monk.topmonks.com/config/ blendid -- build"
+    "start:studio.topmonks.com": "BLENDID_CONFIG_PATH=./studio.topmonks.com/config/ dotenv blendid",
+    "build:studio.topmonks.com": "BLENDID_CONFIG_PATH=./studio.topmonks.com/config/ dotenv blendid -- build",
+    "start:blockchain.topmonks.com": "BLENDID_CONFIG_PATH=./blockchain.topmonks.com/config/ dotenv blendid",
+    "build:blockchain.topmonks.com": "BLENDID_CONFIG_PATH=./blockchain.topmonks.com/config/ dotenv blendid -- build",
+    "start:www.hookamonk.com": "BLENDID_CONFIG_PATH=./www.hookamonk.com/config/ dotenv blendid",
+    "build:www.hookamonk.com": "BLENDID_CONFIG_PATH=./www.hookamonk.com/config/ dotenv blendid -- build",
+    "start:monkstage.topmonks.com": "BLENDID_CONFIG_PATH=./monkstage.topmonks.com/config/ dotenv blendid",
+    "build:monkstage.topmonks.com": "BLENDID_CONFIG_PATH=./monkstage.topmonks.com/config/ dotenv blendid -- build",
+    "start:monkslab.cz": "BLENDID_CONFIG_PATH=./monkslab.cz/config/ dotenv blendid",
+    "build:monkslab.cz": "BLENDID_CONFIG_PATH=./monkslab.cz/config/ dotenv blendid -- build",
+    "start:www.hlidacshopu.cz": "BLENDID_CONFIG_PATH=./www.hlidacshopu.cz/config/ dotenv blendid",
+    "build:www.hlidacshopu.cz": "BLENDID_CONFIG_PATH=./www.hlidacshopu.cz/config/ dotenv blendid -- build",
+    "start:session-monk.topmonks.com": "BLENDID_CONFIG_PATH=./session-monk.topmonks.com/config/ dotenv blendid",
+    "build:session-monk.topmonks.com": "BLENDID_CONFIG_PATH=./session-monk.topmonks.com/config/ dotenv blendid -- build"
   },
   "resolutions": {
     "bluebird": "npm:bluebird@3.7.2",
