[www.hlidacshopu.cz] Moving image assets to cloudinary auto upload facility

--- a/www.hlidacshopu.cz/config/path-config.json
+++ b/www.hlidacshopu.cz/config/path-config.json
@@ -11,6 +11,11 @@
     "src": "data"
   },
 
+  "cloudinary": {
+    "src": "cloudinary",
+    "dest": "www.hlidacshopu.cz"
+  },
+
   "static": {
     "src": "static",
     "dest": "./"
