[blockchain.topmonks.com] Using Cloudinary upload for articles and podcasts

--- a/blockchain.topmonks.com/config/path-config.json
+++ b/blockchain.topmonks.com/config/path-config.json
@@ -7,6 +7,11 @@
     "dest": "./"
   },
 
+  "cloudinary": {
+    "src": "cloudinary",
+    "dest": "blockchain.topmonks.com"
+  },
+
   "data": {
     "src": "data"
   },
