--- a/package.json
+++ b/package.json
@@ -9,18 +9,21 @@
   "dependencies": {
     "@lhci/utils": "^0.3.7",
     "@material/layout-grid": "^4.0.0",
+    "@material/top-app-bar": "^4.0.0",
     "@pulumi/aws": "^1.21.0",
     "@pulumi/pulumi": "^1.10.1",
     "@types/node": "^13.7.0",
+    "lit-html": "^1.1.2",
     "lodash": "4.17.15",
     "yaml": "^1.7.2"
   },
   "devDependencies": {
     "@lhci/cli": "^0.3.8",
+    "@rollup/plugin-alias": "^3.0.1",
     "@topmonks/blendid": "git://github.com/topmonks/blendid.git",
     "@types/chart.js": "^2.9.13",
     "@types/yaml": "^1.2.0",
-    "ava": "^3.2.0",
+    "ava": "^3.3.0",
     "chalk": "^3.0.0",
     "commander": "^4.1.1",
     "dotenv-cli": "^3.1.0",
@@ -32,32 +35,33 @@
     "eslint-plugin-promise": "^4.2.1",
     "esm": "^3.2.25",
     "gulp-markdown-to-json": "^1.1.0",
-    "gulp-merge-json": "^1.3.1",
+    "gulp-merge-json": "^2.0.0",
     "isomorphic-fetch": "^2.2.1",
     "lighthouse": "^5.6.0",
     "lighthouse-logger": "^1.2.0",
-    "local-web-server": "^3.0.7",
-    "lws": "^2.0.8",
-    "lws-basic-auth": "^1.0.3",
-    "lws-blacklist": "^2.0.2",
-    "lws-body-parser": "^1.0.2",
-    "lws-compress": "^1.0.2",
-    "lws-conditional-get": "^1.0.1",
-    "lws-cors": "^2.0.1",
-    "lws-index": "^1.0.5",
-    "lws-json": "^1.0.1",
-    "lws-log": "^1.0.3",
-    "lws-mime": "^1.0.1",
-    "lws-range": "^2.0.1",
-    "lws-request-monitor": "^1.0.4",
-    "lws-rewrite": "^2.1.0",
-    "lws-spa": "^2.0.2",
-    "lws-static": "^1.1.3",
+    "local-web-server": "^4.0.0",
+    "lws": "^3.0.0",
+    "lws-basic-auth": "^2.0.0",
+    "lws-blacklist": "^3.0.0",
+    "lws-body-parser": "^2.0.0",
+    "lws-compress": "^2.0.0",
+    "lws-conditional-get": "^2.0.0",
+    "lws-cors": "^3.0.0",
+    "lws-index": "^2.0.0",
+    "lws-json": "^2.0.0",
+    "lws-log": "^2.0.0",
+    "lws-mime": "^2.0.0",
+    "lws-range": "^3.0.0",
+    "lws-request-monitor": "^2.0.0",
+    "lws-rewrite": "^3.0.0",
+    "lws-spa": "^3.0.0",
+    "lws-static": "^2.0.0",
     "marked": "^0.8.0",
     "npm-run-all": "^4.1.5",
     "prettier": "^1.19.1",
-    "rimraf": "^3.0.1",
-    "stylelint": "^13.0.0",
+    "rimraf": "^3.0.2",
+    "rollup-plugin-pnp-resolve": "^2.0.0",
+    "stylelint": "^13.1.0",
     "stylelint-config-prettier": "^8.0.1",
     "tap-xunit": "^2.4.1"
   },
@@ -108,7 +112,7 @@
     "bluebird": "npm:bluebird@3.7.2",
     "fsevents": "npm:dummypkg-a@1.0.0",
     "lodash": "npm:lodash@4.17.15",
-    "html-minifier": "https://github.com/rarous/html-minifier-terser.git#4b9949c288c9a57ea47ff1bfeac781e9b8b5ea99"
+    "html-minifier": "npm:html-minifier-terser@5.0.3"
   },
   "installConfig": {
     "pnp": true
