--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@types/chart.js": "^2.9.14",
     "@types/yaml": "^1.2.0",
     "ava": "^3.3.0",
+    "babel-eslint": "^10.0.3",
     "chalk": "^3.0.0",
     "commander": "^4.1.1",
     "dotenv-cli": "^3.1.0",
