--- a/package.json
+++ b/package.json
@@ -7,10 +7,10 @@
   "author": "TopMonks",
   "license": "MIT",
   "dependencies": {
-    "@lhci/utils": "^0.3.7",
+    "@lhci/utils": "^0.4.0",
     "@material/layout-grid": "^4.0.0",
     "@material/top-app-bar": "^4.0.0",
-    "@pulumi/aws": "^2.2.0",
+    "@pulumi/aws": "^2.6.0",
     "@pulumi/pulumi": "^2.2.1",
     "@types/node": "^13.9.2",
     "lit-html": "^1.2.1",
@@ -18,7 +18,7 @@
     "yaml": "^1.10.0"
   },
   "devDependencies": {
-    "@lhci/cli": "^0.3.14",
+    "@lhci/cli": "^0.4.0",
     "@rollup/plugin-alias": "^3.1.0",
     "@topmonks/blendid": "git://github.com/topmonks/blendid.git",
     "@types/chart.js": "^2.9.15",
@@ -28,7 +28,7 @@
     "chalk": "^4.0.0",
     "commander": "^5.1.0",
     "dotenv-cli": "^3.1.0",
-    "eslint": "^6.8.0",
+    "eslint": "^7.1.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-ava": "^10.3.0",
     "eslint-plugin-lit": "^1.2.0",
@@ -41,7 +41,7 @@
     "lighthouse": "^5.6.0",
     "lighthouse-logger": "^1.2.0",
     "local-web-server": "^4.0.0",
-    "lws": "=3.0.0",
+    "lws": "3.1.0",
     "lws-basic-auth": "^2.0.0",
     "lws-blacklist": "^3.0.0",
     "lws-body-parser": "^2.0.0",
