--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -189,7 +189,7 @@ jobs:
 
   merge_pr:
     docker:
-      image: cimg/base:2020.01
+      - image: cimg/base:2020.01
     working_directory: ~/topmonks-webs
     steps:
       - checkout
