--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -198,10 +198,22 @@ jobs:
           command: |
             wget --quiet https://github.com/cli/cli/releases/download/v0.10.1/gh_0.10.1_linux_amd64.deb
             sudo apt install ./gh_0.10.1_linux_amd64.deb
+      - run:
+          name: Merge PR
+          command: gh pr merge $(CI_PULL_REQUEST) -d -m
 
 workflows:
   build_and_deploy:
     jobs:
+      - merge_pr:
+          context: org-github
+          requires:
+            - preview-provision
+            - test-www-topmonks-com
+            - test-www-hlidacshopu-cz
+          filters:
+            branches:
+              only: /dependabot\/.*/
       - build:
           context: org-global
       - preview-provision:
